Blackpurl/src/objects/People__c.object
<CustomObject>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Customer1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Customer1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Peoples</relationshipLabel>
        <relationshipName>Peoples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Customer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Customer2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Peoples (Parent Customer2)</relationshipLabel>
        <relationshipName>Peoples1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Co-Worker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>People</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Customer1__c</columns>
        <columns>Parent_Customer2__c</columns>
        <columns>Relationship__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Peo-{00000000}</displayFormat>
        <label>People Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Peoples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>